# clinic-atlas

./: .env  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: gsd-file-manifest.json
.claude/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.opencode/: gsd-file-manifest.json  opencode.json
.opencode/agents/: gsd-code-fixer.md  gsd-debugger.md  gsd-executor.md  gsd-intel-updater.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  (+4 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_source_ingestion_columns.py
backend/app/: config.py  database.py  main.py
backend/app/health/: router.py
backend/app/notes/: models.py  service.py
backend/app/search/: router.py  service.py
backend/app/sources/: models.py  registry.py  router.py  schemas.py  searxng.py  service.py
backend/tests/: conftest.py  test_fts.py  test_health.py  test_ingestion.py  test_schema.py  test_searxng.py  test_source_registry.py
config/: medical_thesaurus.ths  sources.yml
docs/: brainstorming.md  implementation-plan.md
frontend/: Dockerfile  package.json  pnpm-lock.yaml  vitest.config.ts
scripts/: init-postgres.sql
(+336 files in other folders)
